# nriet-rust-art

./: .gitattributes  .gitignore  CURSOR_HANDOFF.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  run_slice_benchmark.py
python/nriet_rust_art/: __init__.py
python/pyart/: _rust_bridge.py
python/pyart/__check_build/: __init__.py  _check_build.py
python/pyart/aux_io/: _odim_sweep.py  edge_netcdf.py  gamicfile.py  kazr_spectra.py  odim_h5.py  rainbow_wrl.py  sinarame_h5.py
python/pyart/core/: transforms.py
python/pyart/correct/: _common_dealias.py  _fast_edge_finder.py  _unwrap_1d.py  _unwrap_2d.py  _unwrap_3d.py  attenuation.py  bias_and_noise.py  despeckle.py  phase_proc.py  region_dealias.py
python/pyart/filters/: gatefilter.py
python/pyart/io/: _sigmetfile.py  cfradial.py  chl.py  mdv_common.py  nexrad_cdm.py  nexrad_interpolate.py  nexrad_level2.py  nexrad_level3.py  output_to_geotiff.py  sigmet.py  uf_write.py  uffile.py
python/pyart/map/: _gate_to_grid_map.py  _load_nn_field_data.py  ckdtree.py  gate_mapper.py  grid_mapper.py
python/pyart/retrieve/: _echo_class.py  _echo_class_wt.py  _kdp_proc.py  advection.py  cappi.py  cfad.py  echo_class.py  kdp_proc.py  qpe.py  qvp.py  simple_moment_calculations.py  spectra_calculations.py  srv.py  vad.py
src/: advection.rs  cappi.rs  cfad.rs  correct.rs  despeckle.rs  echo_class.rs  filters.rs  io.rs  kdp.rs  lib.rs  map.rs  qpe.rs  qvp.rs  rstm.rs  sigmath.rs  simple_moment.rs  spectra.rs  srv.rs  transforms.rs  util.rs  vad.rs
tests/: conftest.py  test_native_extension.py  test_smoke.py
tests/api/: test_api_manifest.py  test_api_manifest_oracle_diff.py  test_pyart_oracle_static_api.py
tests/io/: test_sigmet_reader.py
tests/parity/: test_advection_peak.py  test_attenuation_end_gate_mask.py  test_attenuation_params.py  test_attenuation_prepare_phidp.py  test_bias_and_noise.py  test_bias_and_noise_rhohv.py  test_cappi_height_index.py  test_cfad_normalize.py  test_cfradial_variable_gate.py  test_chl_extract_fields.py  test_circular_stats.py  test_columnsect_get_column_rays.py  test_columnsect_get_sweep_rays.py  test_common_dealias_limits.py  test_correct_kernels.py  test_despeckle.py  test_echo_class_classify_feature.py  test_echo_class_core_scalar.py  test_echo_class_feature_radius.py  test_echo_class_freq_band.py  test_echo_class_kernels.py  test_echo_class_masks.py  test_echo_class_standardize.py  test_echo_class_wt.py  test_edge_netcdf_mask.py  test_gamic_sweep_data.py  test_gate_mapper_apply_field.py  test_gate_mapper_index_map.py  test_gate_to_grid_map.py  test_gatefilter_merge.py  test_geotiff_rgb_values.py  test_hildebrand_sekhon.py  test_image_mute_radar.py  test_kazr_spectra_data.py  test_kdp_proc.py  test_map_grid_nearest.py  test_map_kernels.py  test_mdv_rle8.py  test_migration_slice_audit.py  test_nexrad_cdm_moment.py  (+48 more)
tests/rstm/: test_minhou_manifest.py  test_minhou_operational.py  test_rstm_parser.py  test_rstm_reference.py  test_rstm_rust.py
tools/: api_manifest.py  api_manifest_compare.py  api_manifest_static.py  minhou_manifest.py  parity_compare.py  rstm_parser.py  rstm_reference.py
(+7 files in other folders)
