[package]
name = "arm-pyart-rust"
version = "0.1.0"
edition = "2021"
description = "Private Rust acceleration kernels for a Py-ART-compatible Python package."
repository = "https://github.com/simon-438124536/nriet-rust-art"
publish = false

[lib]
name = "pyart_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
numpy = "0.28.0"
ndarray = "0.17.2"
rayon = "1.12.0"
flate2 = "1.1.9"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
