[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "nriet-rust-art"
version = "0.1.0"
description = "Rust-accelerated radar processing core with a thin Python package shell."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "NRIET Rust ART maintainers" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]

[project.optional-dependencies]
dev = [
  "maturin>=1.13,<2",
  "pytest>=8"
]

[tool.maturin]
python-source = "python"
module-name = "nriet_rust_art._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
