[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "arm_pyart"
version = "0.1.0"
description = "Py-ART-compatible radar toolkit with private Rust acceleration kernels."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "NRIET Rust ART maintainers" }
]
license = "BSD-3-Clause"
license-files = ["LICENSE-PYART.txt"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dependencies = [
  "cartopy>=0.22.0",
  "cftime>=1.5.2",
  "cmweather>=0.3.2",
  "fsspec>=2021.11.0",
  "matplotlib>=3.5.0",
  "mda-xdrlib>=0.2.0",
  "netcdf4>=1.7.2",
  "numpy>=1.21.2",
  "open-radar-data>=0.5.0",
  "pandas>=1.3.4",
  "pint>=0.18.0",
  "pooch>=1.5.2",
  "s3fs>=2021.11.0",
  "scipy>=1.7.3",
  "xarray>=2024.10.0",
  "xradar>=0.12.0"
]

[project.optional-dependencies]
dev = [
  "maturin>=1.13,<2",
  "pytest>=8"
]

[tool.maturin]
python-source = "python"
module-name = "pyart._rust"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
